Première tentative de blog

--- a/_posts/2025-05-02-001.md
+++ b/_posts/2025-05-02-001.md
@@ -1,3 +1,33 @@
+---
+layout: post
+title: "Note d'intention de cette espace internetique"
+excerpt : "Où je vous parle des mes intentions ici."
+categories: "Nouveautés et infos"
+---
+
 # Premier draft d'un nouveau blog.
 
-Comment aborder ce retour en ligne et en écriture de ma part ? Tout d'abord je vais commencer par pondre un brouillon et voir ce que ça donne du point de vue graphique.
+<!--- Comment aborder ce retour en ligne et en écriture de ma part ? Tout d'abord je vais commencer par pondre un brouillon et voir ce que ça donne du point de vue graphique.
+
+C'est pas trop mal.
+
+J'ai fait le choix de revenir sur Github (et donc Microsoft) pour m'héberger, en attendant mieux. Depuis début 2025, je repense vraiment ma présence sur le web. Ma réflexion n'est pas encore très abouti. Dans l'attente de trouver mieux et d'avoir un flux de travail et de publications mieux maîtrisé, je (re)commence ici. Comme le dit le Professeur Joachim : Pensons contenu.
+--->
+
+Je reviens aujourd'hui en ligne, ici, sur ce blog, pour présenter un projet en cours. J'avais un peu fait ça lorsque, en 2023, j'avais documenté un cours sur l'écriture créative (désolé pour l'anglicisme). J'avais eu plaisir à contribuer, dans un endroit précis, à un sujet précis. J'ai aussi eu de plaisir à suivre ce cours et améliorer un peu mes techniques d'écriture même si je ne suis pas, encore, allé plus loin.
+
+En ce moment je passe du temps sur un autre sujet, à savoir l'apprentissage du japonais. J'ai commencé depuis un an environ, dans l'optique d'un voyage et de continuer. Je veux me  sentir à l'aise pour lire des bouquins en VO et d'échanger avec des interlocuteurs. 
+
+Comme souvent, je suis parti de façon très brouillonne en téléchargeant des applications, tentant des formations en lignes ou de l'immersion. La donne a changé quand je me suis fixé pour objectif de passer le [JLPT N5](https://www.jlpt.jp/e/) en 2026. C'est important, pour moi, de se fixer un but plus concret. Dans mes recherches, j'ai trouvé que, pour les autodidactes comme moi, [Genki](https://genki3.japantimes.co.jp/fr/intro/) était un manuel approprié et je l'ai donc acquis. Après quelques nouvelles recherches, je suis tombé sur le projet [Genki Study Resources](https://sethclydesdale.github.io/genki-study-resources/lessons-3rd/) de Seth Clydesdale. 
+
+Sur ce site, vous pourrez vous exercer aux différents exercices du manuel et de son cahier d'exercices. J'aime la magie des internets où on peut trouver un projet open source et bénévole répondant pile poil à mes besoins. Je ne peux donc que vous le conseiller si, comme moi, vous utilisez ce manuel. En plus, vous y trouverez pas mal d'astuces d'apprentissage. Le créateur du projet est un traducteur professionnel qui a créée des projets identiques sur d'autres manuels. 
+
+Le seul soucis est qu'il n'existe pas l'équivalent en français. Cela peut-être un détail, mais, pour ma part, je préfère apprendre une autre langue sans passer par une langue intermédiaire qui n'est pas ma langue maternelle. Je veux éviter les double traductions qui, sans être impossible, sont un peu gourmande en énergie. Je préfère me concentrer sur l'essentiel. 
+
+Ce qui est bien, avec l'open source, c'est que les contributions sont ouvertes. J'ai cherché des traductions en français et ai trouvé un projet un peu abandonné. Pas grave, il suffit que quelqu'un relance le projet sur cette base mais qui ? Comme la réponse est "celui qui la pose", je me suis lancé en commençant quelques contributions.
+
+Bon, on va pas se cacher, le travail est gigantesque vu que le site n'a pas été réfléchi dans l'objectif d'être traduit (et ce n'est pas son but donc pas de reproche à ce niveau là) donc son achèvement dépendra de ma motivation et de celles de mes co-contributeurs. 
+
+Mon premier objectif est de traduire les pages de conseils (que je trouve très avisés) et de me concentrer sur la génération des Decks Anki dont on reparlera. 
+
+En bref, si vous voulez suivre le projet, contribuer ou, tout simplement, suivre mes aventures et mes considérations sur l'apprentissage d'une langue en autodidacte, je vous donne rendez-vous à bientôt.
