--- a/_posts/2025-05-02-NOTES.md
+++ b/_posts/2025-05-02-NOTES.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Note d'intention de cette espace internetique"
+title: "Note d'intention de cet espace internetique"
 excerpt : "Où je vous parle des mes intentions ici."
-categories: "Nouveautés et infos"
+categories: "Infos"
 ---
 
 # Premier draft d'un nouveau blog.
