Correction et création d'un article

--- a/_posts/2025-05-13-journal-02.md
+++ b/_posts/2025-05-13-journal-02.md
@@ -24,7 +24,7 @@ En aparté, j'ai découvert aussi, cette semaine, le [Kaishi 1.5](https://ankiwe
 
 ## Actions sur le projet
 
-Concernant le projet de traduction, j'ai atteind l'objectif que je m'étais fixé. Les 6 (+1) premiers decks ont été traduits et générés. Comme indiqué plus haut, je m'en sert pour les leçons ce qui me permet de tester les Decks. Pour la semaine à venir, je me fixe un objectif moins important pour cause de semaine chargée. Si j'arrive à générer 3 decks je serai content.
+Concernant le projet de traduction, j'ai atteint l'objectif que je m'étais fixé. Les 6 (+1) premiers decks ont été traduits et générés. Comme indiqué plus haut, je m'en sert pour les leçons ce qui me permet de tester les Decks. Pour la semaine à venir, je me fixe un objectif moins important pour cause de semaine chargée. Si j'arrive à générer 3 decks je serai content.
 
 En complément, j'ai avancé sur l'article sur les decks Anki dont j'ai écrit à peu près la moitié.
 
@@ -39,9 +39,3 @@ Oui c'est sans fin.
 Si je regarde la semaine qui vient de s'écouler, outre le terrier de lapin et ce que j'ai détaillé plus haut, j'ai également fait un peu de communication autour de ce projet. L'idée est de trouver à la fois des utilisateurs/utilisatrices et des contributeurs/contributrices ou bien d'échanger avec d'autres apprenantes et apprenants. C'est motivant pour continuer à contribuer même si je le fais avant tout pour moi.
 
 Bref c'est encore un moment où je suis en pleine exploration mais j'essaie de concentrer mes efforts, de surtout travailler sur la constance. Ne pas en faire trop mais plutôt faire régulièrement, un peu chaque jour.
-
-
-
-
-  
-
