Corrections de coquilles et ajout de liens sociaux

--- a/_posts/2025-06-13-journal-03.md
+++ b/_posts/2025-06-13-journal-03.md
@@ -29,7 +29,7 @@ Voilà comment je continue à apprendre régulièrement le japonais, au rythme d
 
 Pour cette dernière partie, j'étais parti sur le [Core2K](https://ankiweb.net/shared/info/2141233552) que j'ai trouvé dans le cadre des mes recherches. Je l'avais entamé au moment où je commençais le Genki plus sérieusement. C'est intéressant et ça permet de travailler autrement. Cependant le Core2K est relativement ancien maintenant et un peu sec en matière d'illustration. En complément il n'est pas disponible en français. Comme je l'indiquais dans le précédent billet (qui commence à dater), j'ai découvert l'existence du Kaishi 1.5K. Il y a moins de vocabulaire, il est plus imagé et, surtout, un projet de traduction est en cours.
 
-Le hic c'est qu'ayant commencé avec le Core2K, j'ai eu un peu peur de perdre mon avancement. C'est alors que j'ai découvert les possibilités d'import sur Anki. D'ailleurs dans [la documentation du Raishi](https://github.com/donkuri/Kaishi), on vous explique comment faire. En complément, j'ai pu incorporé la traduction en cours de finalisation. Bonne nouvelle, elle est en cours de finalisation.
+Le hic c'est qu'ayant commencé avec le Core2K, j'ai eu un peu peur de perdre mon avancement. C'est alors que j'ai découvert les possibilités d'import sur Anki. D'ailleurs dans [la documentation du Kaishi](https://github.com/donkuri/Kaishi), on vous explique comment faire. En complément, j'ai pu incorporé la traduction en cours de finalisation. Bonne nouvelle, elle est en cours de finalisation.
 
 ## Et Duo Lingo alors ? 
 
