Fin de l'écriture de l'article.

--- a/_posts/2025-06-26-journal.md
+++ b/_posts/2025-06-26-journal.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "6月2X日X曜日  - Journal de bord"
+title: "6月26日木曜日  - Journal de bord"
 categories: journal
 meta: "journal de bord"
 ---
 
-Journal de la semaine 26. 
+Journal de la semaine 26. 73ème jour de contribution au projet ["Genki ressources pédagogiques"](https://github.com/brice/genki-study-resources-fr), en apprentissage du japonais intensif depuis 111 jours et moins intensif depuis 476 jours.
 
 ## Relance
 
@@ -48,4 +48,4 @@ En résumé, je ne peux que conseiller de croiser les sources. Si vous ne compre
 
 ## Et l'avancement du projet ? 
 
-Euh... C'est un peu pareil que pour l'apprentissage (oui je me répète). Je dois encore trouver vers quoi aller, sans doute la traduction de l'interface du site.
+Euh... C'est un peu pareil que pour l'apprentissage (oui je me répète). Je dois encore trouver vers quoi aller, sans doute la traduction de l'interface du site. Enfin, pour le moment je vais faire une petite pause estivale.
