Corrections de certains posts

--- a/_posts/2025-09-30-Infos.md
+++ b/_posts/2025-09-30-Infos.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Quelques informations"
-excerpt : "Ils en ai passé des choses, faut que je vous raconte."
+excerpt : "Il s'en ai passé des choses, faut que je vous raconte."
 categories: "Infos"
 ---
 
@@ -20,4 +20,4 @@ Je continue cependant à apprendre le japonais, un peu avec le Genki mais aussi 
 
 En parallèle, l'expérience de l'apprentissage du Japonais me sert à d'autres usages. Ainsi, j'ai créé un deck Anki lors d'une formation plus générale sur la qualité logicielle. Au départ, je n'avais pas prévu mais ce fut intéressant pour réviser les différents notions abordées lors de cette formation. L'usage a été très différent de d'habitude, plus intense. La formation durant quatre jours, avec un passage de certification à la fin, il fallait se mettre en mode bachotage.
 
-Vu le résultat, on va dire que c'était plutôt profitable. Comme j'aime bien partager, j'ai amendé ce deck et l'ai publié en ligne. C'est, une fois de plus, très niche mais cela peux toujours servir à quelqu'un.
+Vu le résultat, on va dire que c'était plutôt profitable. Comme j'aime bien partager, j'ai amendé ce deck et [l'ai publié en ligne](https://ankiweb.net/shared/info/1392568822). C'est, une fois de plus, très niche mais cela peux toujours servir à quelqu'un.
