Le excertp ne prends pas de lien

--- a/_posts/2025-09-17-journal-05.md
+++ b/_posts/2025-09-17-journal-05.md
@@ -2,7 +2,7 @@
 layout: post
 title: "9月 17日 水曜日 - Journal de bord "
 categories: journal
-excerpt: "Journal de bord de reprise. Journal de la semaine 38. En théorie je contribue au projet de traduction des [\"Genki ressources pédagogiques\"](https://github.com/brice/genki-study-resources-fr) depuis plus d'une centaine de jour. En ce moment, c'est au poins mort. Je suis en apprentissage du japonais de façon intense depuis 193 jours et moins intense depuis 558 jours."
+excerpt: "Journal de bord de reprise. Journal de la semaine 38. En théorie je contribue au projet de traduction des \"Genki ressources pédagogiques\" depuis plus d'une centaine de jour. En ce moment, c'est au poins mort. Je suis en apprentissage du japonais de façon intense depuis 193 jours et moins intense depuis 558 jours."
 meta: "journal de bord"
 ---
 
