--- a/_posts/2026-01-30-journal-06.md
+++ b/_posts/2026-01-30-journal-06.md
@@ -6,11 +6,11 @@ excerpt: "J'avais commencé à faire un journal de bord, dans le cadre de contri
 meta: "journal de bord"
 ---
 
-Au mois de janvier j'ai interrompu duolingo après une série de 666 jours d'affillé. En vérité c'est un peu plus, mais je vais garder ce chiffre pour le plaisir. Cette manière de fonctionner ne me convenait plus. Pour pouvoir améliorer mon japonais j'ai entrepris de modifier mes façons d'apprendre. Plus qu'une remise totale en question c'est une évolution des pratiques. J'ai également fais du tri dans mes actions d'apprentissage.
+En janvier j'ai interrompu Duolingo après une série de 666 jours d'affilée. En vérité c'est un peu plus, mais je vais garder ce chiffre pour le plaisir. Cette manière de fonctionner ne me convenait plus. Pour pouvoir améliorer mon japonais j'ai entrepris de modifier mes façons d'apprendre. Plus qu'une remise totale en question j'affine mes pratiques. J'ai également fait du tri dans mes actions d'apprentissage.
 
-Depuis le mois de septembre j'ai rejoins un [groupe de travail en ligne](https://discord.com/invite/apprenons-le-japonais-577898339882762274$) avec lequel je révise le manuel [Minna No Nihongo](https://www.librairielephenix.fr/product/2854/minna-no-nihongo-1-manuel-2eme-ed-i) de façon hebdomadaire. Cela m'aide à travailler la grammaire et surtout à poser mes connaissances à travers des exercices. J'ai également repris le [manuel Genki](https://genki3.japantimes.co.jp/fr/intro/), afin d'avoir un autre éclairage sur l'apprentissage de cette langue.
+Depuis le mois de septembre j'ai rejoint un [groupe de travail en ligne](https://discord.com/invite/apprenons-le-japonais-577898339882762274$) avec lequel je révise le manuel [Minna No Nihongo](https://www.librairielephenix.fr/product/2854/minna-no-nihongo-1-manuel-2eme-ed-i) de façon hebdomadaire. Cela m'aide à travailler la grammaire et surtout à poser mes connaissances à travers des exercices. J'ai également repris le [manuel Genki](https://genki3.japantimes.co.jp/fr/intro/), afin d'avoir un autre éclairage sur l'apprentissage de cette langue.
 
-## Apprendre le japonais (et d'autres langues) jour après jour (et sans duolingo)
+## Apprendre le japonais (et d'autres langues) jour après jour (et sans Duolingo)
 
 En pratique, le Genki et le groupe de travail constitue la base de mon apprentissage. Avec le groupe, nous étudions une leçon en, à peu près, deux semaines. J'ai donc deux fils rouges à ma disposition.
 
@@ -19,15 +19,15 @@ En pratique, le Genki et le groupe de travail constitue la base de mon apprentis
 
 Le premier me permet de corriger mes connaissances orales et de pouvoir poser des questions sur des sujets de grammaire. Le second me permet de me réapproprier ces même sujets, par une autre approche et par un travail plus approfondi.
 
-Pour accompagner ma lecture du Genki, j'ai un carnet où je reformule les règles apprises. J'ai aussi le workboo, que je complète au fur et à mesure. J'illustre ces leçons l'écriture de phrase en Japonais. Ainsi j'assimile au mieux les règles par un exemple construit.
+Pour accompagner ma lecture du Genki, j'ai un carnet où je reformule les règles apprises. J'ai aussi le workbook, que je complète au fur et à mesure. J'illustre ces leçons l'écriture de phrase en Japonais. Ainsi j'assimile au mieux les règles par un exemple construit.
 
 Dans mes lectures et écoute sur l'apprentissage des langues, j'avais acquis qu'il était important d'être constant (comme le dirait Oscar). J'avais aussi retenu de consacrer un peu de temps à l'output ou à la restitution.
 
 Il est facile de trouver beaucoup de ressources pour faire de l'acquisition. Il suffit d'écouter des vidéos, de pianoter sur une app, de lire des leçons. Il est également important d'utiliser son apprentissage pour restituer. Je mets dans ce lot l'écrit, l'oral mais aussi la lecture de phrases simples ou de livres.
 
-C'est pour ça que je prends du temps à restranscrire et appliquer ce que j'ai appris. En conséquence, je prends plus de temps dans mes leçons mais je les découpe en plusieurs parties. Je suis d'ailleurs en train de noter les exercices qui composent mes sessions de travail afin d'aller plus rapidement à l'essentiel.
+C'est pour ça que je prends du temps à restranscrire et appliquer ce que j'ai appris. En conséquence, je prends plus de temps dans mes leçons mais je les découpe en plusieurs parties. Je suis d'ailleurs en train de faire une liste des exercices qui composent mes sessions de travail. Un peu à la manière d'un carnet de session sportive, je suis en train de me préparer un carnet de séances.
 
-En résumé, plutôt que de chercher à apprendre à temps perdu avec des courts exercices (bite-sized) à la Duolinguo, je réserve du temps continu. Je commence par me projeter dans ce que je vais apprendre, découpe ma session en plusieurs exercices. Pour décider de mon sujet, je suis, avec plus ou moins de rigueur, les plans fournis par le Minna No Nihongo et le Genki.
+En résumé, plutôt que de chercher à apprendre à temps perdu avec des courts exercices (bite-sized) à la Duolingo, je réserve du temps continu. Je commence par me projeter dans ce que je vais apprendre, découpe ma session en plusieurs exercices. Pour décider de mon sujet, je suis, avec plus ou moins de rigueur, les plans fournis par le Minna No Nihongo et le Genki.
 
 Je comptais ajouter quelques éléments mais ça fait déjà pas mal d'informations. Dans un prochain article je parlerai plus en profondeur, de la manière dont j'ai également fait évoluer la manière dont j'essaie d'acquérir du vocabulaire.
 
@@ -43,7 +43,7 @@ Pour finir, si vous voulez vous aussi suivre ce processus mais que vous n'avez p
 
 Tout d'abord n'hésitez pas à rejoindre le [Discord "Apprendre le Japonais"](https://discord.com/invite/apprenons-le-japonais-577898339882762274$), on est sympa et accueillant. Néanmoins, si vous êtes timides vous pouvez aussi retrouver des tutorats en ligne qui reprennent les manuels.
 
-Pour le Minna No Nihongo, je conseil la [chaine de Takashi](https://youtu.be/1JephUxTHxg?si=rnwgMlzecoigTmfI). Sur un ton un peu pince sans rire, il commente les différentes leçons du Minna en ajoutant des réflexions et essayant d'être le plus complet possible. Sa pédagogie est très claire et son anglais aussi.
+Pour le Minna No Nihongo, je conseille la [chaine de Takashi](https://youtu.be/1JephUxTHxg?si=rnwgMlzecoigTmfI). Sur un ton un peu pince sans rire, il commente les différentes leçons du Minna en ajoutant des réflexions et essayant d'être le plus complet possible. Sa pédagogie est très claire et son anglais aussi.
 
 Pour la Genki, j'ai trouvé plusieurs tutorats mais celui que je préfère est celui [de Game Gengo](https://youtu.be/AlvQCc6Nvm0?si=QbCQjIXr2Th_RnKn). Il a pour avantage d'illustrer toutes les leçons par des scènes tirés de jeu ou d'anime. Cela permet d'avoir les sonorités à l'oreille.
 
