Correction de liens

--- a/_posts/2026-01-30-journal-06.md
+++ b/_posts/2026-01-30-journal-06.md
@@ -8,7 +8,7 @@ meta: "journal de bord"
 
 En janvier j'ai interrompu Duolingo après une série de 666 jours d'affilée. En vérité c'est un peu plus, mais je vais garder ce chiffre pour le plaisir. Cette manière de fonctionner ne me convenait plus. Pour pouvoir améliorer mon japonais j'ai entrepris de modifier mes façons d'apprendre. Plus qu'une remise totale en question j'affine mes pratiques. J'ai également fait du tri dans mes actions d'apprentissage.
 
-Depuis le mois de septembre j'ai rejoint un [groupe de travail en ligne](https://discord.com/invite/apprenons-le-japonais-577898339882762274$) avec lequel je révise le manuel [Minna No Nihongo](https://www.librairielephenix.fr/product/2854/minna-no-nihongo-1-manuel-2eme-ed-i) de façon hebdomadaire. Cela m'aide à travailler la grammaire et surtout à poser mes connaissances à travers des exercices. J'ai également repris le [manuel Genki](https://genki3.japantimes.co.jp/fr/intro/), afin d'avoir un autre éclairage sur l'apprentissage de cette langue.
+Depuis le mois de septembre j'ai rejoint un [groupe de travail en ligne](https://discord.com/invite/apprenons-le-japonais-577898339882762274) avec lequel je révise le manuel [Minna No Nihongo](https://www.librairielephenix.fr/product/2854/minna-no-nihongo-1-manuel-2eme-ed-i) de façon hebdomadaire. Cela m'aide à travailler la grammaire et surtout à poser mes connaissances à travers des exercices. J'ai également repris le [manuel Genki](https://genki3.japantimes.co.jp/fr/intro/), afin d'avoir un autre éclairage sur l'apprentissage de cette langue.
 
 ## Apprendre le japonais (et d'autres langues) jour après jour (et sans Duolingo)
 
@@ -41,7 +41,7 @@ En 2026, je vais continuer sur ces bases, en établissant des piliers (Groupe de
 
 Pour finir, si vous voulez vous aussi suivre ce processus mais que vous n'avez pas de groupe de travail à disposition, voici quelques ressources supplémentaires. Ce sont des tutorats en ligne, sur youtube, en anglais. Pour ma part je continue à les consulter pour avoir une pédagogie variée.
 
-Tout d'abord n'hésitez pas à rejoindre le [Discord "Apprendre le Japonais"](https://discord.com/invite/apprenons-le-japonais-577898339882762274$), on est sympa et accueillant. Néanmoins, si vous êtes timides vous pouvez aussi retrouver des tutorats en ligne qui reprennent les manuels.
+Tout d'abord n'hésitez pas à rejoindre le [Discord "Apprendre le Japonais"](https://discord.com/invite/apprenons-le-japonais-577898339882762274), on est sympa et accueillant. Néanmoins, si vous êtes timides vous pouvez aussi retrouver des tutorats en ligne qui reprennent les manuels.
 
 Pour le Minna No Nihongo, je conseille la [chaine de Takashi](https://youtu.be/1JephUxTHxg?si=rnwgMlzecoigTmfI). Sur un ton un peu pince sans rire, il commente les différentes leçons du Minna en ajoutant des réflexions et essayant d'être le plus complet possible. Sa pédagogie est très claire et son anglais aussi.
 
